[gd_scene load_steps=12 format=3 uid="uid://clslurietch7b"]

[ext_resource type="PackedScene" uid="uid://cy5ovs5lvndq0" path="res://Personajes/personajes.tscn" id="1_fim51"]
[ext_resource type="Script" path="res://Personajes/Enemigos/enemigo_cerdo.gd" id="2_7rscu"]
[ext_resource type="Texture2D" uid="uid://qh4778c8molj" path="res://Assets_PixelAdventure/Enemies/AngryPig/angryPig.png" id="2_8fbw5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d6juj"]
size = Vector2(22, 24)

[sub_resource type="Animation" id="Animation_43ooq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_ahrvt"]
resource_name = "hurt"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44]
}

[sub_resource type="Animation" id="Animation_fv5cs"]
resource_name = "idle"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_pollv"]
resource_name = "runAngry"
length = 1.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38]
}

[sub_resource type="Animation" id="Animation_qtdds"]
resource_name = "walk"
length = 1.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qghmc"]
_data = {
"RESET": SubResource("Animation_43ooq"),
"hurt": SubResource("Animation_ahrvt"),
"idle": SubResource("Animation_fv5cs"),
"runAngry": SubResource("Animation_pollv"),
"walk": SubResource("Animation_qtdds")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6soe0"]
size = Vector2(24, 24)

[node name="EnemigoCerdo" groups=["Enemigos"] instance=ExtResource("1_fim51")]
collision_layer = 2
collision_mask = 5
script = ExtResource("2_7rscu")

[node name="Sprite2D" parent="." index="0"]
texture = ExtResource("2_8fbw5")
hframes = 9
vframes = 6
frame = 10

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource("RectangleShape2D_d6juj")

[node name="AnimationPlayer" parent="." index="2"]
libraries = {
"": SubResource("AnimationLibrary_qghmc")
}

[node name="Raycasts" type="Node2D" parent="." index="3"]
scale = Vector2(-1, 1)

[node name="RayCastSuelo" type="RayCast2D" parent="Raycasts" index="0"]
target_position = Vector2(0, 20)
collision_mask = 4

[node name="RayCastMuro" type="RayCast2D" parent="Raycasts" index="1"]
scale = Vector2(-1, 1)
target_position = Vector2(-20, 0)
collision_mask = 4

[node name="RayTimer" type="Timer" parent="Raycasts" index="2"]
one_shot = true

[node name="RayCastPlayerDetector" type="RayCast2D" parent="." index="4"]
target_position = Vector2(-50, 0)

[node name="dmgPlayer" type="Area2D" parent="." index="5"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="dmgPlayer" index="0"]
shape = SubResource("RectangleShape2D_6soe0")

[connection signal="timeout" from="Raycasts/RayTimer" to="." method="_on_ray_timer_timeout"]
[connection signal="body_entered" from="dmgPlayer" to="." method="_on_area_2d_body_entered"]
